<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:text="@string/create_task_identity"
            android:textSize="20sp"/>

        <ImageButton
            android:id="@+id/icon_button"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginStart="16dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/create_set_icon"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_add_circle_outline_black_24dp"/>

        <EditText
            android:id="@+id/name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|fill_horizontal"
            android:hint="@string/create_name"
            android:inputType="textAutoCorrect"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif"
            android:lines="1"
            android:text="@string/create_repeat_frequency"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/frequency_value_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:hint="@string/create_every"
            android:inputType="number"/>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/frequency_dropdown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"/>

        <LinearLayout
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="bottom|fill_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/delete_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_delete"/>

            <Button
                android:id="@+id/save_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/create_save"/>
        </LinearLayout>
    </GridLayout>

    <FrameLayout
        android:id="@+id/shade_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#32000000"
        android:clickable="true"
        android:visibility="gone"/>

    <RelativeLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:background="@android:color/white"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:id="@+id/set_icon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:minHeight="48dp"
            android:text="@string/create_set_icon"
            tools:ignore="RelativeOverlap"/>

        <ImageButton
            android:id="@+id/close_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:contentDescription="@string/create_close_icon_drawer"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/icon_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/set_icon_text"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>