<resources>
    <string name="app_name">Cutlery</string>
    <string name="undo">Undo</string>

    <string name="task_empty">Tap the button\nto create a task!</string>
    <plurals name="task_due_overdue">
        <item quantity="one">Yesterday</item>
        <item quantity="other">%d days ago</item>
    </plurals>
    <plurals name="task_due_soon">
        <item quantity="one">Tomorrow</item>
        <item quantity="other">in %d days</item>
    </plurals>
    <string name="task_due">Due</string>
    <string name="task_completed">Task Completed</string>
    <string name="task_deleted">Task Deleted</string>
    <string name="task_undo_success">Undo success</string>

    <string name="create_title_create">Create Task</string>
    <string name="create_title_edit">Edit Task</string>
    <string name="create_set_icon">Set Icon</string>
    <string name="create_name">Name</string>
    <string name="create_save">Save</string>
    <string name="create_delete">Delete</string>
    <string name="create_confirm_delete_title">Delete this Task</string>
    <string name="create_confirm_delete_msg">Are you sure?</string>
    <string name="create_cancel">Cancel</string>
    <string name="create_error_required">Required</string>
    <string name="create_error_numeric">Numeric</string>
    <string name="create_error_invalid">Invalid</string>
    <string name="create_every">Every</string>
    <string name="create_close_icon_drawer">Close icon drawer</string>
    <string name="create_task_identity">Identity</string>
    <string name="create_repeat_frequency">Frequency</string>

    <string name="about_title">About</string>
    <string name="about_version">%1$s\nVersion %2$s</string>
    <string name="about_licence">Icons are made available under CC BY Licence</string>
</resources>
