<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="?attr/listPreferredItemHeight"
                android:paddingEnd="16dp"
                android:background="@android:color/white"
                android:paddingStart="16dp">

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="?attr/listPreferredItemHeight"
        android:layout_height="?attr/listPreferredItemHeight"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toEndOf="@id/icon_image"
        android:layout_toStartOf="@+id/due_undo_text"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:lines="1"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        tools:text="Task Name"/>

    <TextView
        android:id="@id/due_undo_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:gravity="center_vertical"
        tools:text="5 days"/>

    <FrameLayout
        android:id="@+id/click_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"/>
</RelativeLayout>
